# prefect-slurm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test-integration.yaml  test.yaml
examples/: fibonacci.py  hello_world.py  long_running.py  prefect.yaml
prefect_slurm/: cli.py  config.py  worker.py
slurm_environment/: Dockerfile  docker-compose.yaml
slurm_environment/configs/: cgroup.conf  slurm.conf  slurmdbd.conf
slurm_environment/entrypoints/: entrypoint.sh  submitter_entrypoint.sh
slurm_environment/environments/prefect/: pyvenv.cfg
src/prefect_slurm/: __init__.py  config.py  job_spec.py  lifecycle.py  monitoring.py  result.py  slurm_api.py  worker.py
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_config.py  test_settings.py  test_worker.py
tests/integration/: __init__.py  conftest.py  test_slurm_integration.py  utils.py
